--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                       <p>Website : <a href="https://coderaman01.github.io/portfolio"><span>https://coderaman01.github.io/portfolio</span></a></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Email : <span>a9953732947@gmail.com</span></p>
+                      <p>Email : <span>amanjha2401@gmail.com</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Degree : <span>B.Tech(CSE)</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Phone : <span>+91 9953732947</span></p>
+                      <p>Phone : <span>+91 9958082409</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>City : <span>Haryana</span></p>
@@ -533,7 +533,7 @@
               <div class="icon">
                 <i class="fa fa-phone"></i>
                 <h4>Call Me On</h4>
-                <p>+91 9953732947</p>
+                <p>+91 9958082409</p>
               </div>
             </div>
             <!-- contact-info-item end -->
@@ -551,7 +551,7 @@
               <div class="icon">
                 <i class="fa fa-envelope"></i>
                 <h4>Email</h4>
-                <p>a9953732947@gmail.com</p>
+                <p>amanjha2401@gmail.com</p>
               </div>
             </div>
             <!-- contact-info-item end -->
